Debugged some bugs, refactored code

--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -4,11 +4,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Gallery
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:id="@+id/movie_image"></Gallery>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:id="@+id/movie_image"/>
 
     <TextView
         android:layout_width="fill_parent"
