--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -4,54 +4,65 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></TableLayout>
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/movie_image"
         android:maxHeight="100dp"
         android:scaleType="fitXY"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:minHeight="50dp"
+        android:minWidth="50dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/movie_title"
         android:textSize="20sp"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/movie_image"
+        android:layout_toEndOf="@+id/movie_image" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/movie_year"
-        android:layout_toLeftOf="@+id/movie_rating"
+        android:paddingRight="10dp"
+        android:paddingLeft="0dp"
+        android:textSize="16sp"
+        android:layout_toRightOf="@+id/movie_image"
         android:layout_below="@+id/movie_title"
-        android:textSize="16sp"/>
+        android:focusable="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/movie_rating"
-        android:layout_below="@+id/movie_title"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_toRightOf="@+id/movie_year"
+        android:layout_below="@+id/movie_title"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/movie_runtime"
-        android:layout_toLeftOf="@+id/movie_rating"
-        android:layout_below="@+id/movie_title"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_toRightOf="@+id/movie_image"
+        android:layout_below="@+id/movie_year" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/movie_release_date"
-        android:layout_toLeftOf="@+id/movie_runtime"
-        android:layout_below="@+id/movie_title"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_toRightOf="@+id/movie_runtime"
+        android:layout_below="@+id/movie_title"/>
 
 </RelativeLayout>
